--- a/digital_pet_app/pubspec.yaml
+++ b/digital_pet_app/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/images/menu_icons/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
