--- a/DigitalPet/gradle/libs.versions.toml
+++ b/DigitalPet/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.1"
+agp = "8.4.2"
 converterGson = "2.9.0"
 kotlin = "1.9.0"
 coreKtx = "1.10.1"
@@ -29,6 +29,8 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "converterGson" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version = "4.12.0" }
+glideCompiler = { group = "com.github.bumptech.glide", name = "compiler", version = "4.12.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
