--- a/DigitalPet/app/src/main/AndroidManifest.xml
+++ b/DigitalPet/app/src/main/AndroidManifest.xml
@@ -14,15 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DigitalPet"
         tools:targetApi="31">
-        <activity android:name=".ui.MainActivity">
-        </activity>
-        <activity android:name=".ui.LoginActivity"
-            android:exported="true"
+        <activity android:name=".ui.MainActivity" android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.LoginActivity"
+            >
         </activity>
     </application>
 
