--- a/digital-monster/docker-compose.yml
+++ b/digital-monster/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: laravel_app
+    container_name: digi_portal
     volumes:
       - .:/var/www
     networks:
