--- a/digital-monster/Dockerfile
+++ b/digital-monster/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.4-fpm
 
-# Install dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpng-dev \
@@ -11,8 +11,11 @@ RUN apt-get update && apt-get install -y \
     unzip \
     curl \
     git \
-    npm \
-    nodejs
+    gnupg
+
+# Install Node.js & npm (use NodeSource for reliable install)
+RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
+    apt-get install -y nodejs
 
 # Install PHP extensions
 RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
@@ -20,14 +23,22 @@ RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
+# Set working directory
 WORKDIR /var/www
 
+# Copy application files
 COPY . .
 
+# Install PHP dependencies
 RUN composer install
 
+# Set correct permissions
 RUN chown -R www-data:www-data /var/www \
     && chmod -R 755 /var/www/storage
 
-EXPOSE 9000
-CMD ["php-fpm"]
+# Copy startup script
+COPY docker-entrypoint.sh /usr/local/bin/start.sh
+RUN chmod +x /usr/local/bin/start.sh
+
+# Use custom startup script
+CMD ["/usr/local/bin/start.sh"]
